--- a/frontend/src/CSS/AdminPanel.css
+++ b/frontend/src/CSS/AdminPanel.css
@@ -1,7 +1,7 @@
-
 .admin-back-div {
     position: absolute;
-    height: 100vh;
+    height: 100%;
+    width: 100%;
 }
 
 .admin-front-div {
@@ -161,4 +161,29 @@
     border-radius: 10px;
     border: 1px solid rgba(255, 255, 255, 0.18);
 
+}
+
+#IPFSNFtID {
+    position: relative;
+    color: whitesmoke;
+    text-decoration: none;
+    padding: 3rem;
+    padding-top: 10px;
+}
+  
+#IPFSNFtID:before {
+    content: "";
+    position: absolute; 
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 2px;
+    background: #a483ff;
+    transform: scaleX(0);
+    transition: transform 0.5s ease;
+    margin-bottom: 40px;
+}
+  
+#IPFSNFtID:hover:before {
+    transform: scaleX(0.5);
 }
